objects/tfn_Ecological_Community__c.object
<CustomObject>
    <fields>
        <fullName>tfn_Act_Status_Effective_Date__c</fullName>
        <label>Act Status Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tfn_EC_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tfn_EC_EPBC_Act_Status__c</fullName>
        <label>EPBC Act Status</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_EC_FFG_Act_Status__c</fullName>
        <label>FFG Act Status</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_EC_ID__c</fullName>
        <displayFormat>EC{0000}</displayFormat>
        <label>Ecological Community ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>tfn_EC_Imported_Date__c</fullName>
        <label>EC Imported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tfn_Ecological_Community_Description__c</fullName>
        <label>Ecological Community Description</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <label>Ecological Community</label>
    <nameField>
        <label>Ecological Community Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ecological Communities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>